// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Component Test card must be renders correctly with props 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Hello Bondan!
       
      0
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`<Card /> Component Test card must be renders correctly without props 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      hello world
       
      0
    </Text>
  </TouchableOpacity>
</View>
`;
